# 6dof-rigid-body-solver

./: CMakeLists.txt  Globals.hpp  README.md  Structure0815.cpp  Structure0815.hpp  Tests.cpp  main.cpp  math.hpp
